# reduce

./: AddDefinitions.h  CMakeLists.txt  DumpHeaders.cpp  DumpHeaders.h  Rewriter.cpp  Rewriter.h  main.cpp
headers/: CMakeLists.txt  clang___clang_cuda_builtin_vars.c  clang___clang_cuda_cmath.c  clang___clang_cuda_complex_builtins.c  clang___clang_cuda_intrinsics.c  clang___clang_cuda_math_forward_declares.c  clang___clang_cuda_runtime_wrapper.c  clang___stddef_max_align_t.c  clang___wmmintrin_aes.c  clang___wmmintrin_pclmul.c  clang_adxintrin.c  clang_altivec.c  clang_ammintrin.c  clang_arm_acle.c  clang_armintr.c  clang_avx2intrin.c  clang_avx512bwintrin.c  clang_avx512cdintrin.c  clang_avx512dqintrin.c  clang_avx512erintrin.c  clang_avx512fintrin.c  clang_avx512ifmaintrin.c  clang_avx512ifmavlintrin.c  clang_avx512pfintrin.c  clang_avx512vbmiintrin.c  clang_avx512vbmivlintrin.c  clang_avx512vlbwintrin.c  clang_avx512vlcdintrin.c  clang_avx512vldqintrin.c  clang_avx512vlintrin.c  clang_avxintrin.c  clang_bmi2intrin.c  clang_bmiintrin.c  clang_clflushoptintrin.c  clang_cpuid.c  clang_emmintrin.c  clang_f16cintrin.c  clang_float.c  clang_fma4intrin.c  clang_fmaintrin.c  (+50 more)
